--- a/package.json
+++ b/package.json
@@ -2,17 +2,29 @@
 	"name": "grocery",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
+		"deploy": "pnpm run build && wrangler deploy",
+		"dev": "vite",
 		"start": "wrangler dev",
+		"preview": "pnpm run build && wrangler dev --remote",
+		"build": "vite build",
 		"test": "vitest",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
+		"@cloudflare/vite-plugin": "^1.21.2",
 		"@cloudflare/vitest-pool-workers": "^0.12.4",
+		"@types/react": "^19.2.9",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.2",
 		"typescript": "^5.5.2",
+		"vite": "^7.3.1",
 		"vitest": "~3.2.0",
 		"wrangler": "^4.60.0"
+	},
+	"dependencies": {
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3"
 	}
 }
