--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,18 +5,18 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "grocery",
-	"main": "src/index.ts",
+	"main": "worker/index.ts",
 	"compatibility_date": "2025-09-27",
 	"compatibility_flags": [
 		"global_fetch_strictly_public"
 	],
 	"assets": {
 		// The path to the directory containing the `index.html` file to be served at `/`
-		"directory": "./public"
+		"directory": "./dist/client"
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -28,6 +28,19 @@
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
+	"r2_buckets": [
+		{
+			"binding": "AssetsStore",
+			"bucket_name": "grocery",
+			"preview_bucket_name": "grocery-dev"
+		}
+	],
+	"routes": [
+		{
+			"pattern": "grocery.kkdashu.fun",
+			"custom_domain": true
+		}
+	]
 	/**
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
